--- a/css/style.css
+++ b/css/style.css
@@ -179,13 +179,15 @@ ol {
 	padding: 17px 25px;
 	border-radius: 30px;
 	font-weight:bold;
-	background: #500e5d;
+	background: #35158c;
 	color: #fff;
 	line-height: 1;
 	cursor: pointer;
 	text-align: center;
 }
-
+.site-btn.ghost {
+	border: 1px solid #fff;
+}
 .site-btn:hover {
 	color: #fff;
 }
@@ -1561,6 +1563,7 @@ ol {
 /* Large Mobile :480px. */
 
 @media only screen and (max-width: 767px) {
+	#mc_embed_signup .asterisk {color:#ff7072; }
 	.header-section {
 		padding-bottom: 20px;
 	}
@@ -1722,23 +1725,24 @@ ol {
 }
 
 /* MailChimp Form Embed Code - Classic - 12/17/2015 v10.7 */
-#mc_embed_signup { color: #fff; }
+#mc_embed_signup { color: #fff; font-size: 1em; }
 #mc_embed_signup form {display:block; position:relative; text-align:left; padding:10px 0 10px 3%}
 #mc_embed_signup h2 {font-weight:bold; padding:0; margin:15px 0; font-size:1.4em;}
 /* #mc_embed_signup input {border: 1px solid #ABB0B2; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;} */
 #mc_embed_signup input[type=checkbox]{-webkit-appearance:checkbox;}
 #mc_embed_signup input[type=radio]{-webkit-appearance:radio;}
 #mc_embed_signup input:focus {border-color:#333;}
-#mc_embed_signup .button {clear:both; background-color: #aaa; border: 0 none; border-radius:4px; transition: all 0.23s ease-in-out 0s; color: #FFFFFF; cursor: pointer; display: inline-block; font-size:15px; font-weight: normal; height: 32px; line-height: 32px; margin: 0 5px 10px 0; padding: 0 22px; text-align: center; text-decoration: none; vertical-align: top; white-space: nowrap; width: auto;}
 #mc_embed_signup .button:hover {background-color:#777;}
 #mc_embed_signup .small-meta {font-size: 11px;}
 #mc_embed_signup .nowrap {white-space:nowrap;}
+
+
 
 #mc_embed_signup .mc-field-group {clear:left; position:relative; width:96%; padding-bottom:3%; min-height:50px;}
 #mc_embed_signup .size1of2 {clear:none; float:left; display:inline-block; width:46%; margin-right:4%;}
 * html #mc_embed_signup .size1of2 {margin-right:2%; /* Fix for IE6 double margins. */}
 #mc_embed_signup .mc-field-group label {display:block; margin-bottom:3px; line-height: 1em;}
-#mc_embed_signup .mc-field-group input {display:block; width:100%; padding:8px 0; text-indent:2%;}
+#mc_embed_signup .mc-field-group input {display:block; width:100%; margin-top:16px; padding:8px 0; text-indent:2%; border-radius: 30px;}
 #mc_embed_signup .mc-field-group select {display:inline-block; width:99%; padding:5px 0; margin-bottom:2px;}
 
 #mc_embed_signup .datefield, #mc_embed_signup .phonefield-us{padding:5px 0;}
@@ -1748,10 +1752,10 @@ ol {
 #mc_embed_signup .datefield label, #mc_embed_signup .phonefield-us label{display:none;}
 
 #mc_embed_signup .indicates-required {text-align:right; font-size:11px; margin-right:4%;}
-#mc_embed_signup .asterisk {color:#e85c41; font-size:150%; font-weight:normal; position:relative; top:5px;}
+#mc_embed_signup .asterisk {color:#500e5d; font-size:150%; font-weight:normal; position:relative; top:5px;}
 #mc_embed_signup .clear {clear:both;}
 
-#mc_embed_signup .mc-field-group.input-group strong { display:flex; }
+#mc_embed_signup .mc-field-group.input-group strong { float:left; }
 #mc_embed_signup .mc-field-group.input-group ul {margin:0; padding:5px 0; list-style:none; flex:1}
 #mc_embed_signup .mc-field-group.input-group ul li {display:block; padding:3px 0; margin:0;}
 #mc_embed_signup .mc-field-group.input-group label {
@@ -1759,7 +1763,7 @@ ol {
 	display: inline-block;
 	line-height: 1;
 	vertical-align: middle;}
-#mc_embed_signup .mc-field-group.input-group input {display:inline; width:auto; border:none;}
+#mc_embed_signup .mc-field-group.input-group input {display:inline; width:auto; height: auto; border:none;}
 
 #mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%; margin: 0 5%; clear: both;}
 #mc_embed_signup div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;}
@@ -1767,9 +1771,23 @@ ol {
 #mc_embed_signup #mce-success-response {color:#529214; display:none;}
 #mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
 
-#mc-embedded-subscribe {clear:both; width:auto; display:block; margin:1em 0 1em 5%;}
+#mc-embedded-subscribe { background:inherit; border: 1px solid #fff; clear:both; width:auto; display:block; border-radius: 30px; font-weight:bold; font-size: 1em;}
 #mc_embed_signup #num-subscribers {font-size:1.1em;}
 #mc_embed_signup #num-subscribers span {padding:.5em; border:1px solid #ccc; margin-right:.5em; font-weight:bold;}
 
 #mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {display:inline-block; margin:2px 0 1em 0; padding:5px 10px; background-color:rgba(255,255,255,0.85); -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; font-size:14px; font-weight:normal; z-index:1; color:#e85c41;}
 #mc_embed_signup #mc-embedded-subscribe-form input.mce_inline_error {border:2px solid #e85c41;}
+#mc_embed_signup .input-group {
+	min-height: auto;
+}
+#mc_embed_signup .checkbox { margin-left: 32px; margin-top: 4px;}
+#mc_embed_signup .input-group strong { float: left; }
+#mc_embed_signup .checkbox label { margin-top: 0; padding: 0px 0 8px 0; }
+#mc_embed_signup .checkbox input { margin-top: 0; padding: 8px 0; vertical-align: top; }
+#mc_embed_signup .checkbox > *  {  flex: 1};
+@media only screen and (max-width: 767px) {
+	#mc_embed_signup .asterisk {color:#ff7072; }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+	#mc_embed_signup .asterisk {color:#ff7072; }
+}
