ADded deploy script

--- a/static/style.css
+++ b/static/style.css
@@ -1713,7 +1713,7 @@ ol {
 	}
 	.hero-section {
 		height: auto;
-    padding: 35vw 0;
+    padding: 30vw 0 35vw 0;
 	}
 	.hero-content h2 {
 		font-size: 40px;
