--- a/static/style.css
+++ b/static/style.css
@@ -1752,7 +1752,7 @@ ol {
 
 /* MailChimp Form Embed Code - Classic - 12/17/2015 v10.7 */
 .mc_embed_signup { color: #fff; font-size: 1em; }
-.mc_embed_signup form {display:block; position:relative; text-align:left; padding:10px 0 10px 3%}
+.mc_embed_signup form {display:block; position:relative; text-align:left;}
 .mc_embed_signup h2 {font-weight:bold; padding:0; margin:15px 0; font-size:1.4em;}
 .mc_embed_signup input[type=radio]{-webkit-appearance:radio;}
 .mc_embed_signup input:focus {border-color:#333;}
